kubernetes/overlays/dev/middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware

metadata:
  name: strip-discord-prefix

spec:
  stripPrefix:
    prefixes:
      - /api/0/discord
      - /api/1/discord
