kubernetes/overlays/dev/replicas.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
    name: discord

spec:
    replicas: 3
